@@ -1,3 +1,6 @@
+2001-06-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* audio/SDL_mapping.*: 'const' in MixAudio only if SDL >= 1.2.1
+
 2001-06-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* exult.spec.in: removed explicit SDL requirement (added automatically)
 	* configure.in: disabled libkmid by default
